# pystan_examples

./: LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
docs/: Makefile  conf.py  index.rst  make.bat
src/data/: make_dataset.py
src/visualization/: visualize.py
