[tool.poetry]
name = "pystan_examples"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = "8.0"
mlflow = "^1.25.1"
pystan = "^3.4.0"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.2"
japanize-matplotlib = "^1.1.3"
streamlit = "^1.8.1"
rdata = "^0.7"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"
dvc = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
